# harness-pico

./: .env  .gitignore  PICO_NANOBOT_DESIGN_COMPARISON.md  README.md  pyproject.toml
benchmarks/: coding_tasks.json
memory/: MEMORY.md
pico/: INTERVIEW_DRILL_100_QA.md  __init__.py  auto_compact.py  checkpoint.py  cli.py  consolidator.py  context_manager.py  cron.py  dream.py  evaluator.py  gitstore.py  loop.py  memory.py  metrics.py  models.py  run_store.py  runner.py  runtime.py  session_manager.py  skills.py  task_state.py  tools.py  workspace.py
pico/providers/: __init__.py  base.py
pico/security/: __init__.py  network.py
pico/templates/: AGENTS.md  TOOLS.md  __init__.py
pico/templates/agent/: dream_phase2.md  identity.md  platform_policy.md
pico/templates/agent/_snippets/: untrusted_content.md
pico/templates/memory/: dream_phase1.md  dream_phase2.md
pico/tooling/: __init__.py  base.py  capabilities.py  ecosystem.py  executor.py  locks.py  pico_tools.py  registry.py  schema.py
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
templates/: TOOLS.md  __init__.py
templates/agent/: dream_phase2.md  identity.md
tests/: test_context_manager.py  test_core_chain_alignment.py  test_ecosystem_tools.py  test_evaluator.py  test_memory.py  test_metrics.py  test_network_security.py  test_pico.py  test_run_store.py  test_runner.py  test_safety_invariants.py  test_skills.py  test_task_state.py  test_tooling.py
tests/fixtures/bench_repo_patch/: sample.txt
tests/fixtures/bench_repo_readme/: README.md
