[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pico"
version = "0.1.0"
description = "Small local coding agent for Ollama and OpenAI-compatible models"
requires-python = ">=3.10"
dependencies = [
  "prompt-toolkit>=3.0.0",
]

[project.scripts]
pico = "pico.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools]
packages = ["pico", "pico.templates", "pico.templates.memory"]

[tool.setuptools.package-data]
"pico.templates" = ["*.md", "agent/*.md", "agent/_snippets/*.md"]
"pico.templates.memory" = ["*.md"]
